--- a/styles/login.css
+++ b/styles/login.css
@@ -1,12 +1,7 @@
 @font-face {
-  font-family: "NotoSans-Bold";
-  src: url("./fonts/NotoSans-Bold.ttf");
+  font-family: 'Pretendard-M';
+  src: url('./fonts/Pretendard-Medium.ttf');
 }
-@font-face {
-  font-family: "NotoSans-Medium";
-  src: url("./fonts/NotoSans-Medium.ttf");
-}
-
 body {
   background-image: url('./img/background.jpg');
   background-size: cover;
@@ -16,7 +11,7 @@ body {
   height: 100vh;
   width: 100%;
   color: white;
-  font-family: "NotoSans-Medium";
+  font-family: "Pretendard-M";
   /* font-style: normal; */
   letter-spacing: -0.02em!important;
   margin: 0;
@@ -38,6 +33,8 @@ body {
     margin: 2px;
     display: flex;
     justify-content: center;
+    font-size: 18px;
+    font-weight: 300;
   }
 }
 
@@ -50,14 +47,13 @@ body {
   height: 430px;
   margin-bottom: 90px;
   border-radius: 50%;
-  background-color: #8aaa9853;
+  background-color: #a6b0ad36;
 
   h1 {
     display: flex;
     align-items: center;
     margin-bottom: 60px;
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 35px;
   }
 }
 
@@ -73,20 +69,21 @@ body {
     width: 270px;
     padding-left: 20px;
     font-weight: 500;
+    font-size: 16px;
   }
 
   input::placeholder{
-    color: #b3b3b3a5;
+    color: #b2b2b2;
   }
 
   button {
     height: 40px;
     width: 140px;
     margin: 30px;
-    padding-bottom: 5px;
+    padding-bottom: 3px;
     border-radius: 7px;
     border-style: none;
-    font-size: 20px;
+    font-size: 21px;
     font-weight: 550;
     color: #0c3234;
     text-align: center;
