--- a/styles/signin.css
+++ b/styles/signin.css
@@ -2,6 +2,7 @@ body {
   background-image: url('./img/background.jpg');
   background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
