--- a/styles/locker.css
+++ b/styles/locker.css
@@ -42,7 +42,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.7); /* 반투명한 배경색 */
+  background-color: rgba(0, 0, 0, 0.352); /* 반투명한 배경색 */
   display: none; /* 초기에는 숨김 */
 }
 
@@ -52,7 +52,7 @@ body {
   padding: 30px 30px;
   margin: 50px auto;
   border: 1px solid #777;
-  background-color: #fff;
+  background-color: #00382e;
 }
 
 #closeBtn {
@@ -61,4 +61,52 @@ body {
   color: #777;
   font-size: 25px;
   cursor: pointer;
+}
+
+/* 기본 셀렉트 스타일 */
+.custom-select {
+  position: relative;
+  display: inline-block;
+  width: 120px;
+  margin-right: 10px;
+}
+
+/* 선택된 항목 스타일 */
+.select-selected {
+  background-color: none;
+  padding: 1px;
+  border: 1.2px solid white;
+  cursor: pointer;
+  border-radius: 8px;
+  text-align: center;
+}
+
+/* 드롭다운 아이템 컨테이너 */
+.select-items {
+  display: none;
+  position: absolute;
+  width: 100%;
+  max-height: 200px; /* 한 번에 10개 정도만 보이도록 제한 */
+  overflow-y: auto;  /* 스크롤 추가 */
+  background-color: white;
+  border: 1px solid #ccc;
+  z-index: 100;
+  box-sizing: border-box;
+  color: #999;
+}
+
+/* 드롭다운 항목 스타일 */
+.select-items div {
+  padding: 1.5px 10px;
+  cursor: pointer;
+
+}
+
+.select-items div:hover {
+  background-color: #22a49788;
+}
+
+/* 드롭다운 아이템 마지막 항목에서 밑줄 제거 */
+.select-items div:last-child {
+  border-bottom: none;
 }
