--- a/styles/signin.css
+++ b/styles/signin.css
@@ -13,7 +13,7 @@ body {
 
 .signin-form {
   width: 90%;
-
+  
   option {
     background-color: #0c3234;
     color: #eee;
@@ -58,7 +58,7 @@ body {
     border-color: white;
     border-style: solid;
     border-radius: 8px;
-    border-width: 1.4px;
+    border-width: 1.3px;
     color: white;
   }
   select {
@@ -68,7 +68,7 @@ body {
     border-color: white;
     border-style: solid;
     border-radius: 8px;
-    border-width: 1.4px;
+    border-width: 1.3px;
     color: white;
   }
 }
@@ -103,15 +103,13 @@ body {
   }
 }
 
-.birth_date {
+.input-container {
   display: flex;
   align-items: center;
+  height: 40px;
 }
 
-.phone {
-  display: flex;
-  align-items: center;
-}
+
 
 .class-info {
   display: flex;
@@ -140,7 +138,6 @@ body {
 }
 
 .registration-date {
-  margin-bottom: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -155,41 +152,9 @@ body {
   }
 }
 
-.expiry_date{
-  display: flex;
-  align-items: center;
-}
-
-.lesson-input {
-  margin: 15px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  select {
-    height: 26px;
-    width: 100px;
-    /* margin-right: 30px; */
-  }
-  label {
-    margin: 10px 40px 10px 10px;
-  }
-}
-
 .payment_option {
   display: flex;
   width: 100px;
-}
-
-.payment_method {
-  display: flex;
-  align-items: center;
-}
-
-.price {
-  display: flex;
-  align-items: center;
-  margin-top: 15px;
 }
 
 ::placeholder {
@@ -197,19 +162,32 @@ body {
   opacity: 1; /* Firefox */
 }
 
+.lesson-info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+}
+
 /* 기본 셀렉트 스타일 */
 .custom-select {
   position: relative;
   display: inline-block;
-  width: 120px;
+  width: 70px;
   margin-right: 10px;
-}
+  font-size: 15px;
 
+  img {
+    width: 10px;
+    height: 10px;
+  }
+}
 /* 선택된 항목 스타일 */
 .select-selected {
   background-color: none;
-  padding: 1px;
-  border: 1.2px solid white;
+  padding: 1.5px;
+  padding-bottom: 3px;
+  border: 1.3px solid white;
   cursor: pointer;
   border-radius: 8px;
   text-align: center;
