--- a/styles/home.css
+++ b/styles/home.css
@@ -32,7 +32,8 @@ header {
 
 .main-container {
   display: flex;
-  padding: 50px
+  padding: 50px;
+  justify-content: center;
 }
 
 .title-container {
