--- a/styles/locker.css
+++ b/styles/locker.css
@@ -81,7 +81,11 @@ section {
   height: 75px;
   margin: 1px;
   border: solid 0.1px #fff;
-  background-color: #ffffff80;
+  background-color: #ffffff36;
+  text-align: start;
+  color: #fff;
+  font-family: 'Pretendard-R';
+  font-size: 17px;
 }
 
 .locker-box{
@@ -106,13 +110,114 @@ section {
 
 #modalBody {
   width: 800px;
-  height: 500px;
+  height: 600px;
   padding: 30px 30px;
   margin: 50px auto;
   border: solid 1.8px #fff;
   background-color: #003128;
   color: #fff;
   font-family: 'Pretendard-R';
+
+  form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 25px;
+  }
+}
+
+.search-input {
+  font-size: 16px;
+  margin-bottom: 20px;
+  input {
+    width: 200px;
+    margin-left: 10px;
+    padding: 5px 8px;
+    border: solid 1px #fff;
+    background-color: #003128;
+    color: #fff;
+  }
+}
+
+.search-result {
+  width: 600px;
+  display: flex;
+  margin: 20px;
+  justify-content: center;
+}
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14px;
+  border: solid 1px #fff;
+  height: 150px;
+}
+
+.styled-table thead tr {
+  background-color: #fffffff0;
+  color: #003128;
+  text-align: left;
+}
+
+.styled-table thead, .styled-table tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+.styled-table tbody {
+  display: block;
+  height: 150px;
+  overflow-y: auto;
+}
+.styled-table tbody tr:hover {
+  background-color: #ffffff60;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 10px 10px 10px 15px;
+}
+
+.registration-box {
+  border: solid 1px #fff;
+}
+
+.member-btn {
+  text-align: center;
+}
+
+.action-btn {
+  display: none;
+  font-family: "Pretendard-R";
+  font-size: 14px;
+  color: #003128;
+  padding: 2px 10px;
+  border-radius: 5px;
+  border: solid 0.1px #fff;
+}
+
+.styled-table tbody tr:hover .action-btn {
+  display: inline-block;
+}
+
+.member-name-box {
+  margin: 20px;
+}
+
+.member-name {
+  background-color: #ffffff60;
+  padding: 5px 20px;
+  margin-left: 15px;
+  width: auto;
+  border-radius: 5px;
+}
+
+.registration-box {
+  width: 560px;
+  padding: 30px;
 }
 
 #closeBtn {
@@ -121,6 +226,67 @@ section {
   color: #777;
   font-size: 25px;
   cursor: pointer;
+}
+
+.registration-date {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.payment-info {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.label-small {
+  width: 230px;
+  display: flex;
+  justify-content: space-between;
+  font-family: 'Pretendard-R';
+  font-size: 14px;
+  align-items: center;
+}
+
+.label-small input, select {
+  width: 130px;
+  height: 25px;
+  padding-left: 7px;
+  background-color: #003128;
+  border: 0.5px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 12px;
+}
+
+.price {
+  width: 130px;
+  height: 25px;
+  padding-left: 7px;
+  background-color: #003128;
+  border: 0.5px solid #fff;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+}
+
+.register-btn {
+  margin: 20px;
+  width: 100px;
+  height: 30px;
+  font-family: 'Pretendard-R';
+  font-size: 14px;
+  color: #003128;
+}
+
+.register-btn:hover {
+  background-color: #ffffff36;
+  border: solid 1px #fff;
+  border-radius: 2px;
+  color: #fff;
 }
 
 /* 기본 셀렉트 스타일 */
