--- a/styles/signin.css
+++ b/styles/signin.css
@@ -21,8 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  height:100vh;
   width: 100%;
   color: white;
   margin: 0;
@@ -40,6 +39,7 @@ body {
 .signin-element {
   background-color: rgba(255, 255, 255, 0.251);
   display: flex;
+  height: 80%;
   flex-direction: column;
   align-items: center;
   padding: 30px;
@@ -49,7 +49,7 @@ body {
   h1 {
     font-size: 25px;
     margin-top: 0;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     font-family: 'Pretendard-B';
     font-size: 26;
   }
@@ -140,7 +140,7 @@ body {
 .class-info {
   display: flex;
   flex-direction: column;
-  margin: 8px 0 60px 0;
+  margin-top: 8px;
 
   hr {
     margin-bottom: 8px;
