--- a/styles/member.css
+++ b/styles/member.css
@@ -1,4 +1,106 @@
+@font-face {
+  font-family: 'Pretendard-M';
+  src: url('./fonts/Pretendard-Medium.ttf');
+}
+
+@font-face {
+  font-family: 'Pretendard-R';
+  src: url('./fonts/Pretendard-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'Pretendard-B';
+  src: url('./fonts/Pretendard-Bold.ttf');
+}
+
 body {
   background-image: url('./img/background.jpg');
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  height: 100vh;
+  margin: 0;
+}
+
+header{
+  margin-top: 20px;
+  font-family: "Pretendard-M";
+  font-size: 14px;
+}
+
+/* 출력 table css */
+
+section {
+  width: 80%;
+  height: 75%;
+  background-color: #a6b0ad60;
+  margin-top: 45px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+h3 {
+  margin-bottom: 40px;
+  font-family: "Pretendard-B";
+  font-size: 26px;
+}
+
+.search-container {
+  width: 90%;
+}
+
+form {
+  margin-left: 10px;
+}
+
+article {
+  margin: 10px;
+  width: 90%;
+}
+
+.styled-table {
+  height: 500px;
+  margin: 10px;
+  border: solid 1px #fff;
+  font-family: "Pretendard-R";
+  font-size: 13px;
+}
+
+.table-title {
+  background-color: #fffffff7;
+  color: #00382e;
+  padding: 5px 13px;
+}
+
+.table-title, .table-contents {
+  display: flex;
+  align-items: center;
+  border: solid 1px #fff;
+}
+
+.table-contents {
+  padding: 2px 13px;
+}
+
+.table-contents:hover {
+  background-color: #ffffff3b;
+}
+
+.small {
+  width: 80px;
+  padding: 5px;
+}
+
+.medium {
+  width: 100px;
+  padding: 5px;
+}
+
+.big {
+  width: 150px;
+  padding: 5px;
 }
