--- a/styles/member.css
+++ b/styles/member.css
@@ -53,10 +53,14 @@ section {
   height: 75%;
   background-color: #a6b0ad60;
   margin-top: 45px;
+  padding: 30px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: auto;
+  border-radius: 60px;
 }
 
 h3 {
@@ -67,6 +71,61 @@ h3 {
 
 .search-container {
   width: 90%;
+  align-items: center;
+
+  div {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+  }
+}
+
+.search-container input {
+  background: none;
+  border: 1.2px solid #fff;
+  color: #fff;
+  box-sizing: border-box;
+  height: 25px;
+  width: 150px;
+  font-family: 'Pretendard-M';
+  font-size: 13px;
+  padding-left: 8px;
+  margin-right: 10px;
+}
+
+::placeholder {
+  color: #ffffffc0;
+  font-family: 'Pretendard-M';
+}
+
+.search-container button {
+  height: 26px;
+  box-sizing: border-box;
+  color: #00382e;
+}
+
+.search-container select {
+  height: 25px;
+  box-sizing: border-box;
+  margin-right: 10px;
+  background: none;
+  border: 1.2px solid #fff;
+  color: #fff;
+  font-family: 'Pretendard-M';
+  font-size: 13px;
+  padding-left: 3px;
+}
+
+.search-container option {
+  color: #00382e;
+}
+
+#gender {
+  width: 60px;
+}
+
+#manager, #months {
+  width: 80px;
 }
 
 form {
