--- a/styles/signin.css
+++ b/styles/signin.css
@@ -67,7 +67,7 @@ body {
   padding: 30px;
   margin-bottom: 30px;
   width: 650px;
-  border-radius: 10%;
+  border-radius: 60px;
   overflow: auto;
   font-family: 'Pretendard-R';
   font-size: 15px;
